commit tree 095e3dcfaf3b7c42aca3bd445095c1c1cb99e02b

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+      src="https://www.lamarquezone.fr/images/Image/Image/LN0001.gif" 
+    />
+    <img 
+      src="https://i.pinimg.com/originals/10/79/e5/1079e581e46b2a98329b6642f04bd686.gif"
+      alt="star wars V hoth poster gif"
+    />
+    <img 
+      src="https://i.kym-cdn.com/photos/images/original/001/214/869/998.gif"
+      alt="star wars VI & VIII luke gif"
+      title="May the force be with you!"
+    />
   </body>
 </html>
